# Arc

./: AGENTS.md  CMakeLists.txt  README.md
include/arc/: Arc.hpp  ArcVoid.hpp  SharedState.hpp  Weak.hpp
src/: Arc.cpp
test/: CMakeLists.txt
test/src/: ArcSpec.cpp  WeakSpec.cpp
